Test home image

--- a/public/index.jade
+++ b/public/index.jade
@@ -4,3 +4,4 @@
         p Bootstrap boilerplate for Harp is successfully installed. (With sandstone bitches :D !)
         p
             a.btn.btn-primary.btn-lg(href="#{baseUrl}/docs") View the documentation
+        img(src="http://media.techlife.net/wp-content/uploads/sites/29/2013/06/httpassets.cougar.nineentertainment.com_.auassetsTechLife201306172784robot_driving_car.jpg.jpg" alt="")
