Cleaned up homepage, added links for navigation, added main logo, added mini logo to header.

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -55,3 +55,18 @@ article.article-docs{
     width: 100%;
   }
 }
+
+a.logo-homepage{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+div.logo-main-div{
+  min-width: 100px;
+}
+img.logo-main{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
