--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -6,10 +6,15 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand(href="#{baseUrl}/")= name
+            a.logo-homepage(href="#{baseUrl}/")
+              img(src="/images/small_logo.png" alt="" height="57.75px" width="112.5px")
 
         .collapse.navbar-collapse#navbar-top-collapse-1
             ul.nav.navbar-nav.navbar-right
+                li
+                    a(href="#{baseUrl}/docs") Projects
+                li
+                    a(href="#{baseUrl}/docs") About us
                 li
                     a(href="#{baseUrl}/docs") Documentation
                 li
