Made a few small changes.

--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -10,11 +10,10 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
               img(src="/images/small_logo.png" alt="" height="57.75px" width="112.5px")
 
         .collapse.navbar-collapse#navbar-top-collapse-1
+            ul.nav.navbar-nav.navbar-left
+              li
+                a(href="#{baseUrl}/docs") Documentation
             ul.nav.navbar-nav.navbar-right
-                li
-                    a(href="#{baseUrl}/docs") Projects
-                li
-                    a(href="#{baseUrl}/docs") About us
                 li
                     a(href="#{baseUrl}/docs") Documentation
                 li
