--- a/public/index.jade
+++ b/public/index.jade
@@ -1,11 +1,12 @@
 .container
   div.logo-main-div
     img.logo-main(src="/images/logo-header.png" alt="")
+  div
+    p This is a test
   .jumbotron
     h1 Welcome to our website!
     p This is going to be our new home on the web.
     p Bootstrap boilerplate for Harp is successfully installed. (With sandstone bitches :D !)
-    p Below is just a random button that links right to the documentation. This is 
-      "redundant because you can see it on the top right header bar anyway."
+    p Below is just a random button that links right to the documentation. This is redundant because you can see it on the top right header bar anyway.
     p
       a.btn.btn-primary.btn-lg(href="#{baseUrl}/docs") View the documentation
