--- a/public/index.jade
+++ b/public/index.jade
@@ -1,12 +1,16 @@
-.container
-  div.logo-main-div
-    img.logo-main(src="/images/logo-header.png" alt="")
-  div
-    p This is a test
-  .jumbotron
-    h1 Welcome to our website!
-    p This is going to be our new home on the web.
-    p Bootstrap boilerplate for Harp is successfully installed. (With sandstone bitches :D !)
-    p Below is just a random button that links right to the documentation. This is redundant because you can see it on the top right header bar anyway.
-    p
-      a.btn.btn-primary.btn-lg(href="#{baseUrl}/docs") View the documentation
+.jumbotron
+  img.logo-main(src="/images/logo-header.png" alt="")
+
+
+
+.container-fluid
+  .row.text-center.page-row
+    .col-sm-4.border-box
+      h1 Web Development
+      p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
+    .col-sm-4.border-box
+      h1 Software Solutions
+      p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
+    .col-sm-4.border-box
+      h1 Mobile Apps
+      p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
