completed bootswatch showcase page

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -80,7 +80,7 @@ img.logo-main{
    Are for the the three floating blocks under the logo (of equal size) */
 
 .border-box{
-  border: solid 2px;
+  border: transparent 2px;
 
   &:hover{
     border-color: transparent;
