--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -15,6 +15,6 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
                 a(href="#{baseUrl}/docs") Documentation
             ul.nav.navbar-nav.navbar-right
                 li
-                    a(href="#{baseUrl}/docs") Bootswatch SC
+                    a(href="#{baseUrl}/bootswatch") Bootswatch SC
                 li
                     a(href="#{baseUrl}/showcase") Showcase
