added active homepage link

--- a/public/index.jade
+++ b/public/index.jade
@@ -1,3 +1,16 @@
+//- 
+  This is the main homepage which will be rendered into HTML. The header and 
+  footer are in separate files, header.jade and footer.jade respectively.
+
+  At the moment, I'm trying to override links at the top, eg. to set the home
+  link to "active" if you are on the home page.
+
+  - Carl
+
+//Link Overrides for main header
+
+
+
 .jumbotron
   img.logo-main(src="/images/logo-header.png" alt="")
 
@@ -14,3 +27,10 @@
     .col-sm-4.border-box
       h1 Mobile Apps
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
+div
+  .jumbotron
+    .row.text-center.page-row
+      
+        p
+          "This is a test paragraph."
+  <div class="progress-bar" style="width: 45%"></div>
