--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -11,9 +11,12 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
 
         .collapse.navbar-collapse#navbar-top-collapse-1
             ul.nav.navbar-nav.navbar-left
+              li.active
+                a(href=href="#{baseUrl}/") Home
               li
                 a(href="#{baseUrl}/docs") Documentation
             ul.nav.navbar-nav.navbar-right
+
                 li
                     a(href="#{baseUrl}/bootswatch") Bootswatch SC
                 li
