--- a/public/index.jade
+++ b/public/index.jade
@@ -3,14 +3,17 @@
   footer are in separate files, header.jade and footer.jade respectively.
 
   At the moment, I'm trying to override links at the top, eg. to set the home
-  link to "active" if you are on the home page.
+  link to "active" if you are on the home page. 
+
+  NOTE: Make sure you turn on WORD WRAP in this file, whatever editor you are
+  using, or you are going to have a bad time.
 
   - Carl
 
 //Link Overrides for main header
 
 
-
+//This jumbotron is going to be bigger, and contains the main logo but we'll probably switch it out for something more awesome later on.
 .jumbotron
   img.logo-main(src="/images/logo-header.png" alt="")
 
