--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -13,11 +13,15 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
             ul.nav.navbar-nav.navbar-left
               li(class="#{ current.source == 'index' ? 'active' : '' }")
                 a(href=href="#{baseUrl}/") Home
-              li(class="#{ current.source == 'index' ? 'active' : '' }")
-                a(href="#{baseUrl}/docs") Documentation
+              li(class="#{ current.source == 'projects' ? 'active' : '' }")
+                a(href=href="#{baseUrl}/") Projects
+              li(class="#{ current.source == 'about-us' ? 'active' : '' }")
+                a(href=href="#{baseUrl}/") About Us
+              li(class="#{ current.source == 'documentation' ? 'active' : '' }")
+                a(href="#{baseUrl}/docs/documentation") Documentation
             ul.nav.navbar-nav.navbar-right
 
                 li
-                    a(href="#{baseUrl}/bootswatch") Bootswatch SC
+                    a(href="#{baseUrl}/bootswatch/bswatchsc") Bootswatch Elements
                 li
-                    a(href="#{baseUrl}/showcase") Showcase
+                    a(href="#{baseUrl}/showcase/bootstrapsc") Bootstrap Elements
