Tested out glyphicon with bugs.

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -92,3 +92,9 @@ img.logo-main{
   margin-left: auto;
   margin-right: auto;
 }
+
+/* Glyphicon Configuration */
+
+.glyphicon-homepage{
+  font-size: 10em;
+}
