--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -2,5 +2,6 @@ meta(charset='utf8')
 title= name
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro')
+link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
 script(src='#{baseUrl}/js/jquery/jquery.min.js')
 script(src='#{baseUrl}/js/bootstrap/bootstrap.js')
