--- a/public/index.jade
+++ b/public/index.jade
@@ -25,8 +25,9 @@
       //First Column
 
       h1 Web Development
-      i.glyphicon.glyphicon-cutlery.glyphicon-homepage
-      i.fa.fa-camera-retro.fa-5x
+      //i.glyphicon.glyphicon-cutlery.glyphicon-homepage
+      div.circle
+        i.fa.fa-globe.icon-homepage
 
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
 
@@ -34,12 +35,16 @@
       //Second Column
 
       h1 Software Solutions
+      div.circle
+        i.fa.fa-cloud.icon-homepage
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
 
     .col-sm-4.border-box
       //Third Column
 
       h1 Mobile Apps
+      div.circle
+        i.fa.fa-mobile.icon-homepage
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel ullamcorper metus, quis congue eros. Integer posuere risus vel ex sagittis efficitur. Mauris at ornare mauris. Praesent facilisis dolor eu mauris consequat sagittis. Fusce eu neque eu massa porttitor tincidunt. Phasellus finibus nunc justo, ornare varius magna vestibulum eget. Mauris in neque vitae nibh egestas varius ut et sapien. Aliquam orci enim, vestibulum eu arcu vel, volutpat tempor felis. Cras at ex velit. Praesent laoreet fringilla augue, id feugiat nisl commodo in. Etiam dignissim, est quis maximus lobortis, mi dolor volutpat tortor, pellentesque ullamcorper elit nisi nec augue. Vestibulum velit sapien, feugiat et efficitur in, ullamcorper quis sapien. Sed euismod tortor leo.
 
 div
