--- a/public/css/global.less
+++ b/public/css/global.less
@@ -127,8 +127,8 @@ div.circle{
   left:50%;
 
   &:hover{
-  -webkit-transition: width 2s;
-  transition: width 2s;
+  -webkit-transition: background-color 0.5s;
+  transition: background-color .5s;
   border-color: transparent;
   background-color: #FFB056;
   }
