added an awesome background forest image.

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -14,6 +14,8 @@
 
 body{
   padding-top: 70px;
+  background-image: url('/images/forest-dark.jpg');
+  background-repeat: no-repeat;
 }
 
 .text-center {
@@ -104,6 +106,9 @@ i.icon-homepage{
 }
 
 /* Divs for icons */
+
+//This is the circular shaped div on the homepage.
+//Fades to marula green on mouseover
 div.circle{
 
   //Marula logo colour
@@ -112,7 +117,7 @@ div.circle{
   height:200px;
   width:200px;
   -moz-border-radius:200px;
-  -webkit-border-radius:100px;
+  -webkit-border-radius:200px;
   border-color: #3e3f3a;
   border: #3e3f3a 10px;
   position: relative;
@@ -127,9 +132,32 @@ div.circle{
   left:50%;
 
   &:hover{
-  -webkit-transition: background-color 0.5s;
-  transition: background-color .5s;
+  -webkit-transition: background-color 0.5s, color 0.5s;
+  transition: background-color .5s, color 0.5s;
   border-color: transparent;
   background-color: #FFB056;
+  color: white;
   }
+}
+
+//Changes the font colour in the link to match the div it contains:
+a.circle-link{
+  color: #3e3f3a;
+}
+
+//Adds whitespace to match the theme
+div.separator{
+  height: 48px;
+}
+
+.tiled-style1{
+  /*background-image: url('/images/vector-white.jpg');
+  background-repeat: repeat;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;*/
+}
+.transparent-container{
+  background-color: transparent;
 }
