008 Update: Added background

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -16,6 +16,7 @@ body{
   padding-top: 70px;
   background-image: url('/images/forest-dark.jpg');
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .text-center {
