Added Project & About Us pages, made site look more awesome. -Carl

--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -14,9 +14,9 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
               li(class="#{ current.source == 'index' ? 'active' : '' }")
                 a(href=href="#{baseUrl}/") Home
               li(class="#{ current.source == 'projects' ? 'active' : '' }")
-                a(href=href="#{baseUrl}/") Projects
+                a(href=href="#{baseUrl}/projects") Projects
               li(class="#{ current.source == 'about-us' ? 'active' : '' }")
-                a(href=href="#{baseUrl}/") About Us
+                a(href=href="#{baseUrl}/about-us") About Us
               li(class="#{ current.source == 'documentation' ? 'active' : '' }")
                 a(href="#{baseUrl}/docs/documentation") Documentation
             ul.nav.navbar-nav.navbar-right
