added links to images.

--- a/public/index.jade
+++ b/public/index.jade
@@ -51,7 +51,7 @@
 //Separate for 48 pixels
 div.separator-main
 
-div
+div.container
   .jumbotron.semi-transparent
     .row.text-center.page-row
       p
