--- a/public/projects.jade
+++ b/public/projects.jade
@@ -1,5 +1,5 @@
 div.container
-  .jumbotron  
+  .jumbotron.semi-transparent  
     h1.text-center Our Projects
     p This is our page to show off screenshots which link to all our projects so far. This text will be changed to something more suitable at a later stage.
       
@@ -7,7 +7,8 @@ div.container
     p
 
     h2.text-center Activitar Portal
-    img.img-thumbnail.centered-image(src= "/images/Projects/activitar.png")
+    a(href="http://activitar.net/")
+      img.img-thumbnail.centered-image(src= "/images/Projects/activitar.png" href="http://activitar.net/")
     div.separator-small
     h2.text-center Blyde Canyon Adventure Centre
     img.img-thumbnail.centered-image(src= "/images/Projects/blydecanyon.png")
