--- a/public/css/themes/sandstone/_variables.less
+++ b/public/css/themes/sandstone/_variables.less
@@ -14,6 +14,7 @@
 @gray-lighter:           #F8F5F0;
 
 @brand-primary:         #325D88;
+@brand-secondary:       #FFB056;
 @brand-success:         #93C54B;
 @brand-info:            #29ABE0;
 @brand-warning:         #F47C3C;
@@ -39,7 +40,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  'Raleway', sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
