--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -1,5 +1,6 @@
 meta(charset='utf8')
 title= name
+link(href='http://fonts.googleapis.com/css?family=Raleway:700,400', rel='stylesheet', type='text/css')
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro')
 link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
