--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -1,27 +1,32 @@
-nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-    .container-fluid
-        .navbar-header
-            button.navbar-toggle(data-toggle="collapse", data-target="#navbar-top-collapse-1")
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-            a.logo-homepage(href="#{baseUrl}/")
-              img(src="/images/small_logo.png" alt="" height="57.75px" width="112.5px")
-
-        .collapse.navbar-collapse#navbar-top-collapse-1
-            ul.nav.navbar-nav.navbar-left
-              li(class="#{ current.source == 'index' ? 'active' : '' }")
-                a(href=href="#{baseUrl}/") Home
-              li(class="#{ current.source == 'projects' ? 'active' : '' }")
-                a(href=href="#{baseUrl}/projects") Projects
-              li(class="#{ current.source == 'about-us' ? 'active' : '' }")
-                a(href=href="#{baseUrl}/about-us") About Us
-              li(class="#{ current.source == 'documentation' ? 'active' : '' }")
-                a(href="#{baseUrl}/docs/documentation") Documentation
-            ul.nav.navbar-nav.navbar-right
-
-                li
-                    a(href="#{baseUrl}/bootswatch/bswatchsc") Bootswatch Elements
-                li
-                    a(href="#{baseUrl}/showcase/bootstrapsc") Bootstrap Elements
+.navbar.navbar-inverse.navbar-static-top
+  .container
+    .navbar-header
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-inverse-collapse')
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='#{baseUrl}/') Marula.io
+    .navbar-collapse.collapse.navbar-inverse-collapse
+      ul.nav.navbar-nav.navbar-right
+        li(class="#{ current.source == 'index' ? 'active' : '' }")
+          a(href=href="#{baseUrl}/") Home
+        li(class="#{ current.source == 'projects' ? 'active' : '' }")
+          a(href=href="#{baseUrl}/projects") Projects
+        li(class="#{ current.source == 'about-us' ? 'active' : '' }")
+          a(href=href="#{baseUrl}/about-us") About Us
+        li(class="#{ current.source == 'documentation' ? 'active' : '' }")
+          a(href="#{baseUrl}/docs/documentation") Documentation
+        li.dropdown
+          a.dropdown-toggle(href='#', data-toggle='dropdown')
+            | Dropdown
+            b.caret
+          ul.dropdown-menu
+            li
+              a(href='#') Action
+            li
+              a(href='#') Another action
+            li
+              a(href='#') Something else here
+            li.divider
+            li
+              a(href='#') Separated link
