Added more info, added functional links on main page

--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -12,6 +12,8 @@
           a(href=href="#{baseUrl}/") Home
         li(class="#{ current.source == 'projects' ? 'active' : '' }")
           a(href=href="#{baseUrl}/projects") Projects
+        li(class="#{ current.source == 'news' ? 'active' : '' }")
+          a(href=href="#{baseUrl}/news") News
         li(class="#{ current.source == 'about-us' ? 'active' : '' }")
           a(href=href="#{baseUrl}/about-us") About Us
         li(class="#{ current.source == 'documentation' ? 'active' : '' }")
