--- a/public/index.jade
+++ b/public/index.jade
@@ -17,21 +17,21 @@
   .row.text-center
     .col-sm-4.border-box.semi-transparent
       h1 Web Development
-      a.circle-link(href="#")
+      a.circle-link(href="#web")
         div.circle
           i.fa.fa-globe.icon-homepage
       h4 Gone are the days of building simple websites. Clients are demanding more functionality and better results from their websites.
 
     .col-sm-4.border-box.semi-transparent
       h1 Software Solutions
-      a.circle-link(href="#")
+      a.circle-link(href="#cloud")
         div.circle
           i.fa.fa-cloud.icon-homepage
       h4 With our dedicated software development team and a little know-how, getting your web-app idea running will be a breeze.
 
     .col-sm-4.border-box.semi-transparent
       h1 Mobile Apps
-      a.circle-link(href="#")
+      a.circle-link(href="#mobile")
         div.circle
           i.fa.fa-mobile.icon-homepage
       h4 Need iPhone / Android app development for your project? We've got you covered! Click here to find out more.
@@ -41,9 +41,40 @@
       a.btn.btn-default.btn-lg(href="#{baseUrl}/projects") View All of our projects
 div.separator-main
 
-div.container
-  .jumbotron.semi-transparent
-    .row.text-center.page-row
-      p
-        "This is a test paragraph."
+#web.ctr-webdev
+  div.container
+    .row
+      .col-sm-4.border-box.semi-transparent
+        h1 Web Development
+        p - Website design to suit your brand and pocket
+        p - Content Management System
+        p - Responsive Design
+        p - Client satisfaction guaranteed
+      .col-sm-8.border-box.semi-transparent
+        img.img-thumbnail.h1-inline(src= "/images/001web.png");
+div.separator-white
+#cloud.ctr-webdev
+  div.container
+    .row
+      .col-sm-8.border-box.semi-transparent
+        img.img-thumbnail.h1-inline(src= "/images/001cloud.png");
+      .col-sm-4.border-box.semi-transparent
+        h1 Sofware Solutions
+        p - Website design to suit your brand and pocket
+        p - Content Management System
+        p - Responsive Design
+        p - Client satisfaction guaranteed
 
+div.separator-white
+#mobile.ctr-webdev
+  div.container
+    .row
+      .col-sm-4.border-box.semi-transparent
+        h1 Mobile Applications
+        p - Website design to suit your brand and pocket
+        p - Content Management System
+        p - Responsive Design
+        p - Client satisfaction guaranteed
+      .col-sm-8.border-box.semi-transparent
+        img.h1-inline.img-thumbnail(src= "/images/001mobile.png");
+div.separator-white
