Updated About page

--- a/public/about-us.jade
+++ b/public/about-us.jade
@@ -5,5 +5,41 @@
       .col-sm-10.col-center
         h1.text-center About Us
         p Company information and contact details go here.
-        a.btn.btn-primary.btn-lg(href="#") Learn More
 
+.container
+  .row.text-center
+    .panel.panel-success
+      .panel.heading
+         h1 What We Do
+      .panel-body
+         h4 We fund, create and support technological solutions to real world problems. Either by using our skills as developers, graphics designers and entrepreneurs to support projects we love. Or by donating capital gained from the development of web and mobile applications for individuals or companies. We develop for the following mobile platforms and web browsers:
+      .well
+        img.logo.centered-image(src="/images/browsers.png")
+
+
+  .row.text-center
+    .panel.panel-success
+      .panel.heading
+        h1 What We Use
+      .panel-body
+        h4 We have experience in working with Node.js, AngularJS, MeteorJS, LungoJS, Ruby, RubyOnRails, JQuery, Javascript, CSS, HTML and more:
+      .well
+        img.centered-image(src="/images/lang.png")
+        img.centered-image(src="/images/lang2.png")
+
+   .row.text-center
+     .panel.panel-success
+       .panel-headling
+        h1 Why We Do It
+       .panel-body
+        h4 We believe that every problem has a simple solution and that finding these solutions is always possible using "Soulful Logic". In other words every problem can be solved when the search for the solution is carried out with passion and sound logic. 
+        h4 We believe that every person has certain very important rights and that ultimately technology is the way these rights will be ensured and protected. We are dedicated to developing or supporting any technology that protects these rights. We believe the most important rights are: 
+        h4 The right to freedom of expression. 
+        h4 The right to anonymity. 
+        h4 The right to privacy. 
+        h4 The right to your own body. 
+        h4 The right to freedom of movement. 
+        h4 The right to freedom of association. 
+        h4 The right to basic comfort. 
+        h4 The right to personal ownership. 
+        h4 The right to freedom of trade.
